added colours and basics

--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Jennifer Tsai</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Jennifer Tsai!</h1>
-				<p>I'm an incoming Biomedical Engineering student <em>Hello</em>Hi <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:jennifer.tsai11@gmail.com">email</a></li>
-        		<li><a href="https://github.com/jennifertsai">github.com/jennifertsai</a></li>
-			</ul>
-		</footer>
-	</body>
+<html lang="en">
+<head>
+	<title>Jennifer Tsai</title>
+
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
+
+	<!-- Link to Main Stylesheet -->
+	<link rel="stylesheet" href="main.css">
+</head>
+<body>
+
+	<div class="splash">
+		<div class= "navigation bar">
+			<nav>
+				<ul>
+					<li><a href="/">home</a></li>
+					<li><a href="/about">about</a></li>
+					<li><a href="/my work">my work</a></li>
+					<li><a href="/my life">my life</a></li>
+					<li><a href="/cv">cv</a></li>
+					<li><a href="/contact">contact</a></li>
+				</ul>
+			</nav>
+		</div> <!-- /.navigation bar -->
+		<div class="name">
+			<h1>jennifer tsai</h1>
+			<h3>beyond the horizon </h3>
+		</div> <!-- /.name -->
+	</div><!-- /.splash -->
+
+	<footer>
+		<ul>
+			<li><a href="mailto:jennifer.tsai11@gmail.com">email</a></li>
+			<li><a href="https://github.com/jennifertsai">github.com/jennifertsai</a></li>
+		</ul>
+	</footer>
+</body>
 </html>
