--- a/index.html
+++ b/index.html
@@ -2,35 +2,93 @@
 <html lang="en">
 <head>
 	<title>Jennifer Tsai</title>
-
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
-
-	<!-- Link to Main Stylesheet -->
+	<!-- Link to CSS -->
 	<link rel="stylesheet" href="main.css">
+	<!-- Load Bootstrap via CND -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-
 	<div class="splash">
-		<div class= "navigation bar">
-			<nav>
-				<ul>
-					<li><a href="/">home</a></li>
-					<li><a href="/about">about</a></li>
-					<li><a href="/my work">my work</a></li>
-					<li><a href="/my life">my life</a></li>
-					<li><a href="/cv">cv</a></li>
-					<li><a href="/contact">contact</a></li>
-				</ul>
-			</nav>
+		<nav class="navbar navbar-expand-md fixed-top">
+			<!-- Logo -->
+			<a class="navbar-brand" href="#">logo</a>
+			<!-- Toggler -->
+			<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<!-- Links -->
+			<div class="collapse navbar-collapse" id="main-navigation">
+			  <ul class="navbar-nav">
+				<li class="nav-item">
+				  <a class="nav-link" href="#">home</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="#">about</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+						my work
+					  </a>
+					  <div class="dropdown-menu">
+						<a class="dropdown-item" href="#">experience</a>
+						<a class="dropdown-item" href="#">projects</a>
+						<a class="dropdown-item" href="#">download my resume</a>
+					  </div>
+				  </li>
+				  <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+						my life
+					  </a>
+					  <div class="dropdown-menu">
+						<a class="dropdown-item" href="#">blog</a>
+						<a class="dropdown-item" href="#">books</a>
+						<a class="dropdown-item" href="#">gallery</a>
+					  </div>
+				  </li>
+				<li class="nav-item">
+				  <a class="nav-link" href="#">contact</a>
+				</li>
+			  </ul>
+			</div>
+		  </nav>
 		</div> <!-- /.navigation bar -->
-		<div class="name">
-			<h1>jennifer tsai</h1>
-			<h3>beyond the horizon </h3>
-		</div> <!-- /.name -->
+		<header class="page-header header container-fluid">
+			<!-- Name and Slogan -->
+			<div class="description">
+				<h1><b>jennifer </b>tsai</h1>
+				<p>beyond the horizon</p>
+			</div>
+		</header>
+		<!-- Sun -->
+		<div class="sky">
+			<div class="sun">
+			  <div class="sun-outer pulse">
+				<div class="sun-inner-1 pulse-1">
+					<div class="sun-inner-2 pulse-2"></div>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<!-- The Ocean -->
+		<div class="rectangle"></div>
 	</div><!-- /.splash -->
-
+	<div class="about">
+		<div class="hello">
+			<h2>hi! i'm jenn.</h2>
+		</div>
+		<div class="quick-description">
+			<p>i am a neuroscience enthusiast, community leader, and budding engineer by day and an avid reader, runner, and sunset catcher by night. </p>
+		</div>
+	</div>
+	<!-- Including JQuery & Load Bootstrap Javascript -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<footer>
 		<ul>
 			<li><a href="mailto:jennifer.tsai11@gmail.com">email</a></li>
@@ -38,4 +96,5 @@
 		</ul>
 	</footer>
 </body>
+<script src="script.js"></script>
 </html>
