finished splash page minus some bugs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Ramabhadra&display=swap" rel="stylesheet">	
+	<link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Nobile&display=swap" rel="stylesheet">
 	<!-- Link to CSS -->
 	<link rel="stylesheet" href="main.css">
 	<!-- Load Bootstrap via CND -->
@@ -16,7 +19,7 @@
 	<div class="splash">
 		<nav class="navbar navbar-expand-md fixed-top">
 			<!-- Logo -->
-			<a class="navbar-brand" href="#">logo</a>
+			<a class="navbar-brand" href="#"><img src="Logo.png" alt="Logo"></a>
 			<!-- Toggler -->
 			<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
 			  <span class="navbar-toggler-icon"></span>
@@ -60,8 +63,9 @@
 		<header class="page-header header container-fluid">
 			<!-- Name and Slogan -->
 			<div class="description">
-				<h1><b>jennifer </b>tsai</h1>
-				<p>beyond the horizon</p>
+				<h1>hello! i'm <b>jennifer tsai</b></h1>
+				<p>dive in & explore the horizon with me.</p>
+				<!-- <p><i class="arrow down"></i></p> -->
 			</div>
 		</header>
 		<!-- Sun -->
@@ -80,10 +84,21 @@
 	</div><!-- /.splash -->
 	<div class="about">
 		<div class="hello">
-			<h2>hi! i'm jenn.</h2>
+			<h2><br><br>a little bit about me.</h2>
 		</div>
 		<div class="quick-description">
-			<p>i am a neuroscience enthusiast, community leader, and budding engineer by day and an avid reader, runner, and sunset catcher by night. </p>
+			<p>
+				i am a neuroscience enthusiast, community leader, and budding engineer by day and an avid reader, runner, and sunset catcher by night. 
+				<br><br> currently @ <br><br>
+				🏫 university of waterloo, studying biomedical engineering 
+				<br><br>
+				🔬 healthtech connex inc., researching neurotechnology & electrical brain stimulation for neurorehabilitation
+				<br><br>
+				💭 reflect, building a web extension to help people focus better
+				<br><br>
+				🚀 futureshot factory, creating moonshot solutions to the united nations sustainable development goals
+				<br><br><br><br><br><br><br><br><br>
+			</p>
 		</div>
 	</div>
 	<!-- Including JQuery & Load Bootstrap Javascript -->
