fixed logo responsiveness

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="splash">
 		<nav class="navbar navbar-expand-md fixed-top">
 			<!-- Logo -->
-			<a class="navbar-brand" href="#"><img src="Logo.png" alt="Logo"></a>
+			<a class="navbar-brand" href="#"><img class="img-fluid" src="Logo.png" alt="Logo"></a>
 			<!-- Toggler -->
 			<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
 			  <span class="navbar-toggler-icon"></span>
