created about and project feature section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="splash">
 		<nav class="navbar navbar-expand-md fixed-top">
 			<!-- Logo -->
-			<a class="navbar-brand" href="#"><img class="img-fluid" src="Logo.png" alt="Logo"></a>
+			<a class="navbar-brand" href="#"><img class="logo img-fluid" src="Logo.png" alt="Logo"></a>
 			<!-- Toggler -->
 			<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
 			  <span class="navbar-toggler-icon"></span>
@@ -28,9 +28,6 @@
 			<div class="collapse navbar-collapse" id="main-navigation">
 			  <ul class="navbar-nav">
 				<li class="nav-item">
-				  <a class="nav-link" href="#">home</a>
-				</li>
-				<li class="nav-item">
 				  <a class="nav-link" href="#">about</a>
 				</li>
 				<li class="nav-item dropdown">
@@ -38,8 +35,8 @@
 						my work
 					  </a>
 					  <div class="dropdown-menu">
-						<a class="dropdown-item" href="#">experience</a>
-						<a class="dropdown-item" href="#">projects</a>
+						<a class="dropdown-item" href="#">health & tech</a>
+						<a class="dropdown-item" href="#">social impact</a>
 						<a class="dropdown-item" href="#">download my resume</a>
 					  </div>
 				  </li>
@@ -65,7 +62,6 @@
 			<div class="description">
 				<h1>hello! i'm <b>jennifer tsai</b></h1>
 				<p>dive in & explore the horizon with me.</p>
-				<!-- <p><i class="arrow down"></i></p> -->
 			</div>
 		</header>
 		<!-- Sun -->
@@ -83,24 +79,85 @@
 		<div class="rectangle"></div>
 	</div><!-- /.splash -->
 	<div class="about">
-		<div class="hello">
-			<h2><br><br>a little bit about me.</h2>
+		<div class="hello row">
+			<div class="col-sm-5 text-center">
+				<img class="img-fluid" src="104606877_3022722427797235_2197243641098098744_n 1.png" style="width: 400px; ">
+			</div>
+			<div class="col-sm-7">
+				<h2>a little bit about me.</h2>
+				<p>
+					I'm Jenn, a neuroscience researcher, aspiring health tech innovator & philanthropist, and an old soul at heart. Based in Vancouver, I am currently calling the University of Waterloo home, where I am pursuing my first year of Honours Biomedical Engineering.
+					<br><br>
+					I'm interested in leveraging technology to shift how we currently understand and treat brain health, to ultimately empower those living with long-term disabilities. Things I am just as passionate about are creative engineering design, accessible healthcare, climate action, and the use of storytelling to raise awareness about important social issues. Outside of work, I am an avid reader, runner, and sunset chaser.
+					</p>
+				<div class="social-media row">
+					<img class="col-sm" src="email 1.png" style="max-width: 4em;">
+					<img class="col-sm" src="linkedin 1.png" style="max-width: 4em;">
+					<img class="col-sm" src="github-image 1.png" style="max-width: 4em;">
+					<img class="col-sm" src="instagram-sketched 1.png" style="max-width: 4em;">
+					<button class="resume">download my resume</button>
+				</div>
+			</div>
+
 		</div>
-		<div class="quick-description">
+		
+			
+		
+		<div class="sunset-description">
+			<h2><br><i>"stop and watch the sunset"</i></h2>
 			<p>
-				i am a neuroscience enthusiast, community leader, and budding engineer by day and an avid reader, runner, and sunset catcher by night. 
-				<br><br> currently @ <br><br>
-				🏫 university of waterloo, studying biomedical engineering 
-				<br><br>
-				🔬 healthtech connex inc., researching neurotechnology & electrical brain stimulation for neurorehabilitation
-				<br><br>
-				💭 reflect, building a web extension to help people focus better
-				<br><br>
-				🚀 futureshot factory, creating moonshot solutions to the united nations sustainable development goals
-				<br><br><br><br><br><br><br><br><br>
+				I'm on a life-long journey of discovery. Not only about the world, but also of myself. In a world that's always hustling, it is important for me to take the time to reflect on how much I've grown and accomplished, and to appreciate all the experiences that have molded me into the person I am today - much like taking in the beauty of a sunset. My best ideas, I've realized, come out once the sun has set; when the world around me as slowed itself down.				<br><br>
+				I'm hoping this website can serve as a living documentation of my sunset-induced ideas and my adventure of becoming the person I aspire to be: through shaping my personal values, relationships, and career aspirations. I invite you to join me! 😊			
 			</p>
 		</div>
-	</div>
+		<div class="featured-projects">
+			<h2>a sneak peek of what i'm working on.</h2>
+			<div class="row">
+				<div class="col-md-4 my-3">
+					<div class="card h-100">
+						<img class="card-img-top" src="neurocatch.png" alt="Card image cap">
+						<div class="card-body">
+						  <h5 class="card-title">🔬 researching novel neurorehabilitation technologies </h5>
+						  <p class="card-text">healthtech connex inc.</p>
+						</div>
+						<div class="card-footer">
+						  <small class="text-muted">07/2019-present</small>
+						</div>
+					  </div>
+				</div>
+
+				<div class="col-md-4 my-3">
+					<div class="card h-100">
+						<img class="card-img-top" src="reflect.png" alt="Card image cap">
+						<div class="card-body">
+						  <h5 class="card-title">💙 building a web blocker extension that promotes digital mindfulness</h5>
+						  <p class="card-text">reflect.</p>
+						</div>
+						<div class="card-footer">
+						  <small class="text-muted">11/2019-present</small>
+						</div>
+					  </div>
+				</div>
+				<div class="col-md-4 my-3">
+					<div class="card h-100">
+						<img class="card-img-top" src="futureshot.png" alt="Card image cap">
+						<div class="card-body">
+						  <h5 class="card-title">🚀 incubating social impact projects that address the united nations sdg’s</h5>
+						  <p class="card-text">futureshot factory</p>
+						</div>
+						<div class="card-footer">
+						  <small class="text-muted">06/2020-present</small>
+						</div>
+					  </div>
+				</div>
+			  </div>
+		</div>
+		<div class="core-focusses">
+			<h2>my core focusses.</h2>
+		</div>
+		<div class="values">
+			<h2>values i live by.</h2>
+		</div>
 	<!-- Including JQuery & Load Bootstrap Javascript -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
