added focusses and values

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<img class="img-fluid" src="104606877_3022722427797235_2197243641098098744_n 1.png" style="width: 400px; ">
 			</div>
 			<div class="col-sm-7">
-				<h2>a little bit about me.</h2>
+				<h2><mark>a little about me.</mark></h2>
 				<p>
 					I'm Jenn, a neuroscience researcher, aspiring health tech innovator & philanthropist, and an old soul at heart. Based in Vancouver, I am currently calling the University of Waterloo home, where I am pursuing my first year of Honours Biomedical Engineering.
 					<br><br>
@@ -111,7 +111,7 @@
 			</p>
 		</div>
 		<div class="featured-projects">
-			<h2>a sneak peek of what i'm working on.</h2>
+			<h2><mark>a sneak peek of what i'm working on.</mark></h2>
 			<div class="row">
 				<div class="col-md-4 my-3">
 					<div class="card h-100">
@@ -151,22 +151,54 @@
 					  </div>
 				</div>
 			  </div>
+			  <div class="container">
+				<h3>view all projects -></h3>
+			  </div>
+
 		</div>
 		<div class="core-focusses">
-			<h2>my core focusses.</h2>
+			<h2><mark>my core focusses.</mark></h2>
+			<div class="row">
+				<div class="col-sm-4 text-center">
+					<p>neuroscience & mental health</p>
+				</div>
+				<div class="col-sm-4 text-center">
+					<p>social justice</p>
+				</div>
+				<div class="col-sm-4 text-center">
+					<p>philantrophy</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-4 text-center">
+					<p>interdisciplinary collaboration</p>
+				</div>
+				<div class="col-sm-4 text-center">
+					<p>ethical research & innovation</p>
+				</div>
+				<div class="col-sm-4 text-center">
+					<p>human-centred design</p>
+				</div>
+			</div>
 		</div>
 		<div class="values">
-			<h2>values i live by.</h2>
+			<h2><mark>values i live by.</mark></h2>
+			<p>gratitude
+				<br>
+				vulnerability & initiative
+				<br> 
+				authenticity
+				<br>
+				compassion
+				<br>
+				growth mindset
+			</p>
 		</div>
 	<!-- Including JQuery & Load Bootstrap Javascript -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-	<footer>
-		<ul>
-			<li><a href="mailto:jennifer.tsai11@gmail.com">email</a></li>
-			<li><a href="https://github.com/jennifertsai">github.com/jennifertsai</a></li>
-		</ul>
-	</footer>
+
+
 </body>
 <script src="script.js"></script>
 </html>
