--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						</div>
 					</div>
 				</div> <!-- /.row -->
-				<div class="container">
+				<div class="container text-right">
 					<a href="projects.html" class="more-about-me btn" role="button">view all projects</a>
 				</div>
 			</div> <!-- /.inner -->
@@ -343,7 +343,8 @@
 		</div> <!-- /.check-this-out -->
 
 	<!-- Footer -->
-<footer class="page-footer font-small mdb-color lighten-3 pt-4">
+<footer class="page-footer">
+
 
 
   
