--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 					  <a class="nav-link" id="pills-3-tab" data-toggle="pill" href="#pills-3" role="tab" aria-controls="pills-3" aria-selected="false">philantrophy🌏</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" id="pills-4-tab" data-toggle="pill" href="#pills-4" role="tab" aria-controls="pills-4" aria-selected="false">human-centred innovation🔬</a>
+						<a class="nav-link" id="pills-4-tab" data-toggle="pill" href="#pills-4" role="tab" aria-controls="pills-4" aria-selected="false">human-centred research & innovation🔬</a>
 					  </li>
 					  <li class="nav-item">
 						<a class="nav-link" id="pills-5-tab" data-toggle="pill" href="#pills-5" role="tab" aria-controls="pills-5" aria-selected="false">interdisciplinary collaboration🤝</a>
@@ -317,7 +317,7 @@
 		</div> <!-- /.check-this-out -->
 		<div class="conclusion">
 			<div class="inner">
-				<p> 🌊 Thank you for diving so deep into my website! Feel free to check out my other pages or connect with me using the contact information below. Open to any feedback on how I designed and developed this website, too!</p>
+				<p> 🌊 Thank you for diving so deep! Feel free to check out my other pages or connect with me using the contact information below. Open to any feedback on how I designed and developed this website, too!</p>
 			</div>
 			
 		</div>
@@ -327,8 +327,24 @@
 
 
 
-  
+	<div class="row socials">
+		
+		<a href="mailto:jennifer.tsai11@gmail.com" target="_blank">
+			<img src="email 1.png">
+		</a>
+		<a href="https://www.linkedin.com/in/jennifertsaii/" target="_blank">
+			<img src="linkedin 1.png">
+		</a>
+		<a href="https://www.instagram.com/jennifertsaii/" target="_blank">
+			<img src="instagram-sketched 1.png">
+		</a>
+		<a href="https://github.com/jennifertsai" target="_blank">
+			<img src="github-image 1.png">
+		</a>
+		
+	</div>
 	<!-- Copyright -->
+	
 	<div class="footer-copyright text-center py-3">made with ❤ by jennifer tsai © 2020
 	</div>
 	<!-- Copyright -->
