added gallery page, imported photos

--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,10 @@
 		<link rel="stylesheet" href="main.css">
 		<!-- Load Bootstrap via CND -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<!-- Lightbox Files -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css">
+		
 	</head>
 	<body>
 		<div class="splash">
@@ -48,10 +52,243 @@
 				</div>
             </nav>
 		</div> <!-- .splash -->
-		
-
-
-
+		<div class="lightbox-gallery">
+			<div class="inner">
+				<h2>snapshots of sweet things in my life...</h2>
+                <p>✌ This page is mainly for me to look back on, but feel free to snoop around! I love exploring new things, attending fun events, and meeting new people. Shoutout to all of my amazing friends, team mates, and family who make my life brighter everyday :) Click on the photos for captions and to view them in slideshow form! </p>
+				<div class="row">
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-30-prom-walking.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="diy prom 2020 - featuring my beautiful friends i grew up with.">
+								<img src="gallery-images/gallery-30-prom-walking.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="zoom col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-29-prom-girls.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="diy prom 2020 - i love my friends part 2 💖">
+								<img src="gallery-images/gallery-29-prom-girls.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="zoom col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-28-prom-twirl.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="diy prom 2020 - the only time i get to twirl like a princess :)">
+								<img src="gallery-images/gallery-28-prom-twirl.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+				</div> <!-- .row -->
+				<div class="row">
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-27-mirror-pic.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="quarantine 2020 - staying home.">
+								<img src="gallery-images/gallery-27-mirror-pic.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-26-lighthouse-park.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="views @ lighthouse park in north vancouver.">
+								<img src="gallery-images/gallery-26-lighthouse-park.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-25-grad-cruise.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="grad cruise 2020.">
+								<img src="gallery-images/gallery-25-grad-cruise.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+				</div> <!-- .row -->
+				<div class="row">
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-24-grad-dad.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="graduation day 2020 - picture with dad.">
+								<img src="gallery-images/gallery-24-grad-dad.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-23-grad-leo.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="graduation day 2020 - fh leo club senior team :)">
+								<img src="gallery-images/gallery-23-grad-leo.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-22-grad-girls.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="graduation day 2020 - all of my favourite girls.">
+								<img src="gallery-images/gallery-22-grad-girls.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+				</div> <!-- .row -->
+				<div class="row">
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-21-artona-girls.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="artona photos 2020 - yes, we did bring stuffed animals.">
+								<img src="gallery-images/gallery-21-artona-girls.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-20-artona-sa.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="artona photos 2020 - science academy favs.">
+								<img src="gallery-images/gallery-20-artona-sa.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-19-halloween.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="halloween 2019 - dressing up as m&m's.">
+								<img src="gallery-images/gallery-19-halloween.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+				</div> <!-- .row -->
+				<div class="row">
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-18-vmun-committee.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="vmun 2020 - last mun conference of high school, shoutout to the great fcc committee.">
+								<img src="gallery-images/gallery-18-vmun-committee.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-17-vmun-speaking.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="vmun 2020 - speaking at closing ceremonies.">
+								<img src="gallery-images/gallery-17-vmun-speaking.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-16-vmun-cahs-team.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="cahsmun team at vmun 2020 :)">
+								<img src="gallery-images/gallery-16-vmun-cahs-team.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+				</div> <!-- .row -->
+				<div class="row">
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-15-cmd-f2020.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="cmd-f 2020 hackathon @ ubc - building a mental health app.">
+								<img src="gallery-images/gallery-15-cmd-f2020.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-14-leo-workshop.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="fh leo club - presenting an event planning workshop.">
+								<img src="gallery-images/gallery-14-leo-workshop.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-13-learn-day.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="local hack day, learn @ ubc nwplus - shoutout to anson for participating in our first hackathon event together.">
+								<img src="gallery-images/gallery-13-learn-day.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+				</div> <!-- .row -->
+				<div class="row">
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-12-cahs2020-walking.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="cahsmun 2020 team - aka family.">
+								<img src="gallery-images/gallery-12-cahs2020-walking.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-11-cahs2020.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="cahsmun 2020 team photoshoot day.">
+								<img src="gallery-images/gallery-11-cahs2020.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-10-cahs2019.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="cahsmun 2019 committee - felipe caldron's cabinet.">
+								<img src="gallery-images/gallery-10-cahs2019.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+				</div> <!-- .row -->
+				<div class="row">
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-9-whistler.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="vacationing @ whistler, bc - taking in the amazing scenery.">
+								<img src="gallery-images/gallery-9-whistler.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-8-lost-lake.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="boating @ lost lake in whistler - dodging a dragonfly :')'">
+								<img src="gallery-images/gallery-8-lost-lake.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-7-miniso.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="fun photoshoot day back in the summer of 2018 - featuring cathy 🥰">
+								<img src="gallery-images/gallery-7-miniso.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+				</div> <!-- .row -->
+				<div class="row">
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-6-upside-down.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="pretending to be kids and hanging upside down on monkey bars...">
+								<img src="gallery-images/gallery-6-upside-down.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-5-conservatory-emma.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="bird-watching @ the bloedel conservatory in vancouver - featuring emma 💚 ">
+								<img src="gallery-images/gallery-5-conservatory-emma.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-4-conservatory.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="exploring an amazing indoor garden.">
+								<img src="gallery-images/gallery-4-conservatory.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+				</div> <!-- .row -->
+				<div class="row">
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-3-sa-banquet.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="science academy banquet 2019 - i don't know why i'm holding a plant, haha.">
+								<img src="gallery-images/gallery-3-sa-banquet.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-2-ubc.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="field trip @ ubc engineering - doing a campus scavenger hunt.">
+								<img src="gallery-images/gallery-2-ubc.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 mt-4">
+						<div class="zoom">
+							<a href="gallery-images/gallery-1-foret.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="enjoying coffee & treats @ le foret cafe in burnaby, bc - featuring cathy :)">
+								<img src="gallery-images/gallery-1-foret.png" class="img-fluid">
+							</a>
+						</div>
+					</div>
+				</div> <!-- .row -->
+				
+			</div> <!-- .inner -->
+		</div> <!-- .lightbox -->
 		<!-- Footer -->
 		<footer class="page-footer">
 			<div class="row socials">
@@ -76,4 +313,7 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<script src="script.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
 </html>
