--- a/work.html
+++ b/work.html
@@ -85,7 +85,7 @@
 							<div class="card h-100">
 								<img class="card-img-top" src="images/projects-personal-website.png" alt="gradient background with sun">
 								<div class="card-body d-flex flex-column">
-									<h6 class="card-focus">Summer 2020 • Web Dev, UX/UI, Content</h6>
+									<h6 class="card-focus">Summer 2020 • Web Dev, UX/UI, Writing</h6>
 									<h5 class="card-title">creating this personal website</h5>
 									<p class="card-text">Other than learning how to code in HTML, CSS, and Bootstrap, this project really made me reflect deeply about my personal goals and values. After several existential crises and design iterations, I’m happy to say that I’ve finally created - from scratch -  a digital space that truly embodies me. </p>
 									<!-- <a href="#" class="card-link mt-auto">View project</a> -->
