--- a/gallery.html
+++ b/gallery.html
@@ -30,20 +30,16 @@
 				<div class="collapse navbar-collapse" id="main-navigation">
 					<ul class="navbar-nav">
 						<li class="nav-item">
+							<a class="nav-link" href="index.html">home</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="about.html">about</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="work.html">my work</a>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-								my life
-							</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#">blog</a>
-								<a class="dropdown-item" href="#">books</a>
-								<a class="dropdown-item" href="#">gallery</a>
-							</div>
+						<li class="nav-item">
+							<a class="nav-link" href="#">my life</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="gallery.html">gallery</a>
@@ -204,8 +200,8 @@
 					</div>
 					<div class="col-md-4 mt-4">
 						<div class="zoom">
-							<a href="gallery-images/gallery-11-cahs2020.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="cahsmun 2020 team photoshoot day.">
-								<img src="gallery-images/gallery-11-cahs2020.png" class="img-fluid">
+							<a href="gallery-images/gallery-11-fhmun.png" data-toggle="lightbox" data-gallery="image-gallery" data-title="fh model united nations club :)">
+								<img src="gallery-images/gallery-11-fhmun.png" class="img-fluid">
 							</a>
 						</div>
 					</div>
@@ -286,9 +282,12 @@
 						</div>
 					</div>
 				</div> <!-- .row -->
-				
+				<p>
+					Credits to ashleydw.github.io for this easily implementable CSS and Javascript lightbox library :)
+				</p>
 			</div> <!-- .inner -->
 		</div> <!-- .lightbox -->
+
 		<!-- Footer -->
 		<footer class="page-footer">
 			<div class="row socials">
