--- a/index.html
+++ b/index.html
@@ -26,20 +26,16 @@
 				<div class="collapse navbar-collapse" id="main-navigation">
 					<ul class="navbar-nav">
 						<li class="nav-item">
+							<a class="nav-link" href="index.html">home</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="about.html">about</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="work.html">my work</a>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-								my life
-							</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#">blog</a>
-								<a class="dropdown-item" href="#">books</a>
-								<a class="dropdown-item" href="#">gallery</a>
-							</div>
+						<li class="nav-item">
+							<a class="nav-link" href="#">my life</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="gallery.html">gallery</a>
